# rraytracer

./: Cargo.toml
src/: camera.rs  color.rs  consts.rs  light.rs  main.rs  object.rs  object_store.rs  raytracer.rs  surface.rs
src/object/: sphere.rs  triangle.rs
