[package]
name = "rust_tracer"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum_dispatch = "0.3.13"
eyre = "0.6.12"
glam = "0.27.0"
once_cell = "1.19.0"
softbuffer = "0.4.2"
tobj = "4.0.2"
winit = "0.29.15"
